--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,8 +10,10 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-    <p><label for="name">Your Name:</label><input id="name" type="text"/></p>
-    <p><label for="food">Your Favorite Food:</label><input id="food" type="text"/></p>
-
+    <form>
+      <p><label for="name">Your Name:</label><input id="name" type="text"/></p>
+      <p><label for="food">Your Favorite Food:</label><input id="food" type="text"/></p>
+      <input type="submit">
+    </form>
   </body>
 </html>
