--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -12,7 +12,7 @@
     <!-- Insert Your Form Below -->
     <form method="POST" action="/food">
       <p><label for="name">Your Name:</label><input id="name" type="text"/></p>
-      <p><label for="food">Your Favorite Food:</label><input id="food" type="text"/></p>
+      <p><label for="fav_food">Your Favorite Food:</label><input id="food" type="text"/></p>
       <input type="submit">
     </form>
   </body>
