Automatically backed up by Learn

--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -11,8 +11,8 @@
 
     <!-- Insert Your Form Below -->
     <form method="POST" action="/food">
-      <p><label for="name">Your Name: </label><input id="name" type="text"></p>
-      <p><label for="fav_food">Your Favorite Food: </label><input id="fav_food" type="text"></p>
+      <p><label for="name">Your Name: </label><input name="name" type="text"></p>
+      <p><label for="fav_food">Your Favorite Food: </label><input name="fav_food" type="text"></p>
       <input type="submit">
     </form>
   </body>
